파일명 및 README.md 파일 정리

--- a/project01/index_messi.html
+++ b/project01/index_messi.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style_yk.css">
+	<link rel="stylesheet" href="css/style_messi.css">
 	<title>#01 이미지 박스 링크</title>
 </head>
 <body>
