--- a/project01/index_messi.html
+++ b/project01/index_messi.html
@@ -6,6 +6,28 @@
 	<title>#01 이미지 박스 링크</title>
 </head>
 <body>
-	<h1>작업 전</h1>
+	<h1>섬네일 이미지 박스</h1>
+	<div class="section_book">
+		<a href="#" class="book_header">
+			<em>Book VS Book</em>
+			헤세를 따라 거다.<br>
+			헤세가 읽은 책, 헤세가 걸은 길을 따라 여행하기
+		</a>
+		<ul class="list_book">
+		<li>
+			<a href="#" class="link_box">
+				<img src="images/@book1.jpg" alt="헤세로 가는길">
+				<strong class="title">헤세로 가는길은 어디죠?</strong>
+			</a>
+		</li>
+		<li>
+			<a href="#" class="link_box">
+				<!-- <img src="images/@book2.jpg" alt="우리가 사랑하 헤세, 헤세가 사랑한 책들"> -->
+				<img src="http://placehold.it/200x30" alt="우리가 사랑하 헤세, 헤세가 사랑한 책들">
+				<strong class="title">우리가 사랑한 헤.세. 헤세가 사랑한 책.들</strong>
+			</a>
+		</li>
+		</ul>
+	</div>
 </body>
 </html>
