--- a/project01/index_messi.html
+++ b/project01/index_messi.html
@@ -6,7 +6,7 @@
 	<title>#01 이미지 박스 링크</title>
 </head>
 <body>
-	<h1>섬네일 이미지 박스</h1>
+	<h1>섬네일 이미지 박스2</h1>
 	<div class="section_book">
 		<a href="#" class="book_header">
 			<em>Book VS Book</em>
