--- a/project01/index_messi.html
+++ b/project01/index_messi.html
@@ -6,28 +6,31 @@
 	<title>#01 이미지 박스 링크</title>
 </head>
 <body>
-	<h1>섬네일 이미지 박스2</h1>
-	<div class="section_book">
-		<a href="#" class="book_header">
-			<em>Book VS Book</em>
-			헤세를 따라 거다.<br>
-			헤세가 읽은 책, 헤세가 걸은 길을 따라 여행하기
+	<h1>섬네일 이미지 박스</h1>
+	<hr>
+	<h2>IE9+ 표준 브라우저</h2>
+	<ul class="list_book">
+	<li>
+		<a href="#" class="link_box">
+			<img src="images/@sample.jpg" alt="단풍사진">
+			<strong class="title ell">가을은 천고마비의 계절, 하늘은 높고 말은 살찐다.</strong>
 		</a>
-		<ul class="list_book">
-		<li>
-			<a href="#" class="link_box">
-				<img src="images/@book1.jpg" alt="헤세로 가는길">
-				<strong class="title">헤세로 가는길은 어디죠?</strong>
-			</a>
-		</li>
-		<li>
-			<a href="#" class="link_box">
-				<!-- <img src="images/@book2.jpg" alt="우리가 사랑하 헤세, 헤세가 사랑한 책들"> -->
-				<img src="http://placehold.it/200x30" alt="우리가 사랑하 헤세, 헤세가 사랑한 책들">
-				<strong class="title">우리가 사랑한 헤.세. 헤세가 사랑한 책.들</strong>
-			</a>
-		</li>
-		</ul>
-	</div>
+	</li>
+	</ul>
+	<hr>
+	<h2>IE8 대응</h2>
+	<p>CSS3 opacity 속성은 IE9 이상 부터 지원되며, ms filter 를 이용해서 opacity 효과를 낼 수 있지만, filter 자체가 :after,:before 같이 가상요소에는 적용되지 않는다. 그래서 딤드처리를 위한 요소가 필요하다.</p>
+	<ul class="list_book">
+	<li>
+		<a href="#" class="link_box">
+			<img src="images/@sample.jpg" alt="단풍사진">
+			<div class="bg_dimmed"></div>
+			<strong class="title ell">
+				가을은 천고마비의 계절, 하늘은 높고 말은 살찐다.
+			</strong>
+		</a>
+	</li>
+	</ul>
+	
 </body>
 </html>
