--- a/project01/index_ccc.html
+++ b/project01/index_ccc.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=no">
 <title>과제1</title>
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/style_ccc.css" />
 <script type="text/javascript" src="js/html5.js"></script>
 <!--[if lte IE 8]>
 <script type="text/javascript" src="js/respond.min.js"></script>
@@ -16,7 +16,7 @@
 			<li>
 				<div class="img_fig">
 					<a href="javascript:;">
-						<img src="img/1.jpg" alt="" />
+						<img src="images/1.jpg" alt="" />
 						<span class="bord_posi"></span>
 					</a>
 					<a href="javascript:;">
@@ -28,9 +28,9 @@
 			<li class="txt_line img_fig">
 				<a href="javascript:;">
 					<div class="tex_fig">
-						<img src="img/imgs.gif" alt="" />
+						<img src="images/imgs.gif" alt="" />
 						<span class="bord_posi"></span>
-						<!-- <h5><img src="img/bookvs.gif" alt="book vs book" /></h5>
+						<!-- <h5><img src="images/bookvs.gif" alt="book vs book" /></h5>
 						<dl>
 							<dt>마르크스의 삶, 사랑</dt>
 							<dd>아버지이자 남편으로서 인간 마르크스의 삶은 어땠는가?</dd>
@@ -41,7 +41,7 @@
 			<li>
 				<div class="img_fig">
 					<a href="javascript:;">
-						<img src="img/2.jpg" alt="" />
+						<img src="images/2.jpg" alt="" />
 						<span class="bord_posi"></span>
 					</a>
 					<a href="javascript:;">
