--- a/project02/index_messi.html
+++ b/project02/index_messi.html
@@ -16,8 +16,56 @@
 		<span id="target" class="inner-loading-bar"></span>
 	</div>
 
-<script src="http://code.jquery.com/jquery.js"></script>
+<!-- <script src="https://code.jquery.com/jquery.js"></script> -->
 <script>
+	/* 표현식 함수 */
+	var loadingBar = {
+		'settings': {
+			'target': document.getElementById('target'),
+			'posX': window.getComputedStyle ? parseInt(window.getComputedStyle(target).left) : parseInt(target.currentStyle.left),
+			'maxPosX': 200,
+			'distance' : 5
+		},
+		'init': function(){
+			this.repeatLoading();
+		},
+		'repeatLoading': function(){
+		 	setInterval(this.animationLoading, 25);
+		 },
+		 'animationLoading': function(){
+			if( loadingBar.settings.posX === loadingBar.settings.maxPosX ) {
+				loadingBar.settings.posX = -40;
+			} else {
+				loadingBar.settings.target.style.left = loadingBar.settings.posX + 'px';
+			}
+			loadingBar.settings.posX += loadingBar.settings.distance;
+		 }
+	}
+	loadingBar.init();
+
+	/* 선언식 함수 
+	var target = document.getElementById('target'),
+		posX = window.getComputedStyle ? parseInt(window.getComputedStyle(target).left) : parseInt(target.currentStyle.left),
+		maxPosX = 200,
+		distance = 5;
+	
+	function animationLoading() {
+		if( posX === maxPosX ) {
+			posX = -40;
+		} else {
+			target.style.left = posX + 'px';
+		}
+		
+		posX += distance;
+	}
+	var repeatLoading = function(){
+		setInterval(animationLoading, 25);
+	}
+	
+	repeatLoading();
+	*/ 
+
+	/* jQuery 방법 
 	(function($){
 		var $target = $('#target');
 
@@ -30,6 +78,7 @@
 		setInterval(animateLoading, 1);
 
 	})(window.jQuery)
+	*/
 </script>
 </body>
 </html>
