--- a/project01/index_messi.html
+++ b/project01/index_messi.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style_messi.css">
-	<title>#01 이미지 박스 링크</title>
+	<title>01 이미지 박스 링크</title>
 </head>
 <body>
 	<h1>섬네일 이미지 박스</h1>
