--- a/project03/index_messi.html
+++ b/project03/index_messi.html
@@ -2,9 +2,22 @@
 <html lang="ko">
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/style_messi.css">
 	<title>03 반응형 리스트 구분선</title>
+	<!--[if IE 8]>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 <body>
-	
+	<h1>03 반응형 리스트 구분선</h1>
+	<hr>
+	<ul class="list_wrap clearfix">
+	<li>리스트 - 01</li>
+	<li>리스트 - 02</li>
+	<li>리스트 - 03</li>
+	<li>리스트 - 04</li>
+	<li>리스트 - 05</li>
+	<li>리스트 - 06</li>
+	</ul>
 </body>
 </html>
