--- a/project01/index_midking.html
+++ b/project01/index_midking.html
@@ -4,16 +4,43 @@
 	<meta charset="UTF-8">
 	<title>과제 1</title>
 	<style type="text/css">
-		.imgBox{width:300px;border:1px solid red;position: relative;}
-		.imgBox img{width:100%;display:block;}
-		.imgBox .text{height:30px;background:#000;opacity:0.4;position:absolute;bottom:0;left:0;width:100%;}
-		.imgBox .text strong{color:#fff;display:block;line-height:30px;padding:0 10px;border-top:1px solid red;opacity: 1;}
+		.imgBox{
+			width:50%;
+			min-width:250px;
+			overflow:hidden;}
+		.linkBox:after{
+			content:'';
+			position:absolute;
+			left:0;right:0;top:0;bottom:0; /* 공간을 자동으로 채우게 할 수 있다 */
+			border:2px solid #000;
+			opacity:0.6;} /* 불투명함 : 투명도 (부모에게 주면 자식에게 상속되고 풀수있는 방법이 없다) */
+		.imgBox a{
+			position:relative;
+			height:150px;
+			display:block;}
+		.imgBox img{
+			width:100%;
+			margin:auto 0;
+			position:absolute;
+			top:0;bottom:0;}
+		.text{
+			position:absolute;
+			bottom:0;left:0;right:0;
+			padding:5px;
+			background-color:rgba(0, 0, 0, 0.6); /* Red, Green, Blue, Alpha */
+			color:#fff;}
+		.dot{
+			overflow:hidden; /* 넘치면 : 안보이게 */
+			text-overflow:ellipsis; /* 텍스트가 - 넘치면 : 생략(...) */
+			white-space:nowrap;} /* 공백문자 : br 태그를 만날때까지 행갈이를 하지 않는다 */
 	</style>
 </head>
 <body>
 	<div class="imgBox">
-		<img src="images/love.png" />
-		<div class="text"><strong>첫 스터디 발표를 축하합니다.</strong></div>
+		<a href="#this" class="linkBox">
+			<img src="images/love.png" />
+			<span class="text dot">재미가 없다 사는게 재미가 없다 사는게 재미가 없다 사는게 재미가 없다 사는게 재미가 없다 사는게 재미가 없다 사는게 </span>
+		</a>
 	</div>
 </body>
 </html>
