용진이형꺼 commit

--- a/project04/index_ccc.html
+++ b/project04/index_ccc.html
@@ -4,10 +4,23 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style_ccc.css">
 	<title>유동적인 정사각형 박스 만들기!</title>
+<style type="text/css">
+/* reset */
+h1 {
+	color: #333;
+}
+
+/* style */
+.flex-box{position:relative;width:100px;height:100px;padding-left:10%;padding-top:10%;background:red;}
+.box{position:absolute;top:50%;left:50%;margin:-10.5px 0 0 -24px}
+
+</style>
 </head>
 <body>
 	<h1>04 유동적인 정사각형 박스 만들기!</h1>
 	<hr>
-	<div class="flex-box"></div>
+	<div class="flex-box">
+		<div class="box">컨텐츠</div>
+	</div>
 </body>
-</html>
+</html><p></p>
