--- a/project02/index_ccc.html
+++ b/project02/index_ccc.html
@@ -13,18 +13,7 @@
 .box{display:inline-block;height:200px;width:50%;}
 /* -------------- loader -------------- */
 .loader{position:relative;top:100px;width:100%;height:20px;background:#eb6f62}
-.loader:before{
-content: "";
-position:absolute;
-background:#fff;
-top:0px;
-left:0px;
-height:20px;
-width:0px;
-z-index:0;
-opacity:1;
-animation:loader 10s ease-in-out infinite;
-}
+.loader:before{content: "";position:absolute;background:#fff;top:0px;left:0px;height:20px;width:0px;z-index:0;opacity:1;animation:loader 10s ease-in-out infinite;}
 
 .loader:after{
 content: "LOADING ...";
